--- a/res/layout/onoff_widget.xml
+++ b/res/layout/onoff_widget.xml
@@ -6,8 +6,8 @@
         
         <ImageButton
             android:id="@+id/widgetCanvas"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="72dp"
+            android:layout_height="72dp"
             android:background="@drawable/widget_bg"
             android:layout_gravity="top"
         />	
